--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+  {% include 'nav.html' %}
   <div class="container">
     <!-- Title -->
     <h1>Jovian Careers</h1>
